SERVER-128057 Save probe project slots atomically in InMemoryJoinCursor::saveState() (#56601)

GitOrigin-RevId: b3913641fdba1b565597aa078b124150094e4968